--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -15,7 +15,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: 'Checkout'
+      uses: actions/checkout@v3
+      with:
+        submodules: 'recursive'
     - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
