Switch back to ant-javacard binary artifact
Building ant-javacard from source requires maven and will not work with a simple ant command. This worked before probably due to some lingering cached files under .m2/.

--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -25,4 +25,4 @@ jobs:
         java-version: '8'
         distribution: 'temurin'
     - name: Build with Ant
-      run: ant -noinput
+      run: ant -noinput -buildfile build.xml
