--- a/.gitignore
+++ b/.gitignore
@@ -94,5 +94,5 @@ hs_err_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/eclipse,java
 
-/bin/
 IllegalSecurityChip.cap
+ext/ant-javacard.jar
