--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ext/ant-javacard"]
-	path = ext/ant-javacard
-	url = https://github.com/martinpaljak/ant-javacard.git
+[submodule "ext/sdks"]
+	path = ext/sdks
+	url = https://github.com/martinpaljak/oracle_javacard_sdks.git
