Switch to maven Standard Directory Layout
We might start using maven for managing unit test dependencies in the future so this is a nice-to-have.

--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="src/main/javacard"/>
 	<classpathentry kind="lib" path="ext/sdks/jc303_kit/lib/api_classic.jar"/>
 	<classpathentry kind="lib" path="ext/sdks/jc303_kit/lib/api_connected.jar"/>
 	<classpathentry kind="output" path="bin"/>
